# fb-parser

./: .gitignore  README.md  app.py  pyproject.toml
chrome_proxy_extension/: background.js  manifest.json
data/: accounts.json  proxies.json
src/: database.py  facebook_login.py  proxy_account_pairs.db  proxy_checker.py  utils.py
tests/: accounts.json  proxies.json  test_proxy_checker.py
