[tool.poetry]
name = "fb-parser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
requests-html = "^0.10.0"
selenium = "^4.25.0"
browsermob-proxy = "^0.8.0"
chromedriver-binary = "^131.0.6733.0.0"
webdriver-manager = "^4.0.2"
loguru = "^0.7.2"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
